<resources>
    <string name="app_name">Movie Assistant</string>
    <string name="title_search">Search</string>
    <string name="title_watch_list">Watch List</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Home</string>
    <string name="error_text">Unexpected Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">Or</string>
    <string name="continue_google">Sign Up With Google</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_asistant">MOVIE ASISTANT</string>
</resources>