<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:enabled="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_movie_24"
        android:enabled="true"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/baseline_list_24"
        android:enabled="true"
        android:title="@string/title_watch_list" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/baseline_favorite_24"
        android:enabled="true"
        android:title="@string/title_favorites" />

</menu>