<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.itapps.moviescatalog.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.itapps.moviescatalog.ui.watch_list.WatchListFragment"
        android:label="@string/title_watch_list"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.itapps.moviescatalog.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />
</navigation>