<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:paddingVertical="24dp"
            android:text="MOVIE ASISTANT"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            app:boxBackgroundColor="@color/material_dynamic_neutral_variant100"
            android:hint="@string/prompt_email"
            app:hintTextColor="@color/material_dynamic_neutral20"
            android:textColorHint="@color/material_dynamic_neutral20"
            app:boxStrokeColor="@color/material_dynamic_neutral20"
            app:placeholderTextColor="@color/white"
            app:errorEnabled="false"
            app:startIconDrawable="@drawable/baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            app:boxStrokeColor="@color/material_dynamic_neutral20"
            app:boxBackgroundColor="@color/material_dynamic_neutral100"
            app:hintTextColor="@color/material_dynamic_neutral20"
            android:hint="@string/prompt_password"
            app:placeholderTextColor="@color/white"
            android:textColorHint="@color/material_dynamic_neutral20"
            app:errorEnabled="false"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:height="24dp"
                android:enabled="true"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:backgroundTint="@color/material_dynamic_primary40"
                android:text="@string/action_sign_in_short" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>